--- a/wp-content/themes/blueorange/newcss/style-new.css
+++ b/wp-content/themes/blueorange/newcss/style-new.css
@@ -639,9 +639,17 @@ input[type="search"]::-webkit-search-results-decoration {
 	}
 }
 .video_sec {
-    video {
-	    object-fit: cover;
+	.video_wrapper {
+		width: 100%;
+		height: 345px;
+		overflow: hidden;
 	    border-radius: 20px;
+	    display: flex;
+	    align-items: center;
+	}
+    video {
+    	height: calc(100% + 120px);
+	    object-fit: cover;
 	    cursor: pointer;
 	}
 }
@@ -2196,4 +2204,10 @@ footer {
 			}
 		}
 	}
+}
+
+
+.stand_logos {
+    display: flex;
+    gap: 1.5rem;
 }
