--- a/wp-content/themes/blueorange/newcss/style-new.css
+++ b/wp-content/themes/blueorange/newcss/style-new.css
@@ -356,6 +356,11 @@ input[type="search"]::-webkit-search-results-decoration {
 			display: inline-block;
 			font-size: var(--bs-fs16);
 			font-weight: 600;
+			&:hover {
+				border-color: var(--bs-brand-orange);
+				background: var(--bs-brand-orange);
+				color: var(--bs-brand-blue);
+			}
 		}
 	}
 	.menu > ul > li {
@@ -639,17 +644,9 @@ input[type="search"]::-webkit-search-results-decoration {
 	}
 }
 .video_sec {
-	.video_wrapper {
-		width: 100%;
-		height: 345px;
-		overflow: hidden;
-	    border-radius: 20px;
-	    display: flex;
-	    align-items: center;
-	}
     video {
-    	height: calc(100% + 120px);
-	    object-fit: cover;
+	    object-fit: contain;
+	    border-radius: 20px;
 	    cursor: pointer;
 	}
 }
@@ -2039,8 +2036,12 @@ footer {
 	}
 	.post_dtl_sec {
 		font-size: var(--bs-fs18);
-		p {
-			font-size: var(--bs-fs22);
+		form {
+			[type="submit"] {
+				img {
+					margin: 0 !important;
+				}
+			}
 		}
 	}
 }
