Menu active css and code
Menu active css and code

--- a/wp-content/themes/blueorange/newcss/responsive-new.css
+++ b/wp-content/themes/blueorange/newcss/responsive-new.css
@@ -132,6 +132,11 @@
 .container-xxl {
     --bs-gutter-x: 3rem;
 }
+#header {
+    .menu > ul > li {
+        padding: 0 15px;
+    }
+}
 .healthtech_tabs.b_service_sec {
     .case--tabs-wrapper {
         .tab--data.sec_bgimg {
@@ -204,10 +209,19 @@
     }
 }
 ul.menu-main {
-    padding-right: 25px;
     border: 1px solid rgb(242 246 249 / 5%);
     border-radius: 12px;
     margin-bottom: 0;
+}
+li.menu-item-has-children.active, li.menu-item-has-children:hover {
+    background: #fff;
+    border-radius: 10px;
+}
+li.menu-item-has-children.active a, li.menu-item-has-children:hover > a {
+    color: var(--bs-text) !important;
+}
+li.menu-item-has-children.active a i::before {
+    content: "\f106";
 }
 }
 .banner_sec {
@@ -290,6 +304,7 @@ ul.menu-main {
         }
     }
 }
+
 }
 
 @media (min-width: 576px) {
@@ -322,14 +337,14 @@ ul.menu-main {
 #search {
     max-width: 540px;
     right: 160px;
-}   
+}	
 footer {
     .ftr_nav_col {
         width: 100%;
         margin-left: 0;
     }
     .ftr_contact, .ftr_logo_col {
-        width: 100%;
+    	width: 100%;
     }
     .ftr_logo_col {
         margin-bottom: 1.5rem;
@@ -367,7 +382,7 @@ footer {
     --bs-fs22: 20px;
 }
 .container-xxl {
-    --bs-gutter-x: 2.5rem;
+	--bs-gutter-x: 2.5rem;
 }
 #search {
     right: 56px;
@@ -445,7 +460,7 @@ footer {
     }
     .menu > ul > li{
         line-height: 1;
-        margin:0;
+        padding:0;
         display: block;
     }
     .menu > ul > li > a{
@@ -629,7 +644,7 @@ footer {
     .list--item {
         width: 50%;
         &:last-child {
-            width: 100%;
+        	width: 100%;
         }
     }
     /*.item--inner {
@@ -678,7 +693,7 @@ footer {
 }
 .get__started {
     .sec__bg {
-        padding: 10%;
+    	padding: 10%;
     }
 }
 .case--tabs-wrapper {
@@ -803,6 +818,10 @@ footer {
         max-height: 100% !important;
     }
 }
+li.menu-item-has-children.active a {
+    color: var(--bs-text) !important;
+	font-weight: 600 !important;
+}
 }
 
 @media (max-width: 767.98px) {
@@ -864,21 +883,21 @@ footer {
 .services_list_container {
     .service--item {
         .item--inner {
-            flex-direction: column;
-            .item--title, .item--content {
-                width: 100%;
-            }
-            .item--title {
-                padding-bottom: 1rem;
-            }
-            .item--count {
-                width: unset;
+        	flex-direction: column;
+        	.item--title, .item--content {
+        		width: 100%;
+        	}
+        	.item--title {
+        		padding-bottom: 1rem;
+        	}
+        	.item--count {
+        		width: unset;
                 padding-right: 10px;
                 line-height: 1.15;
-            }
+        	}
         }
     }
-}   
+}	
 .overview_blueorange {
     .overview--wrapper {
         padding: 0;
@@ -890,7 +909,7 @@ footer {
     }
 }
 .footer_logo img.flogo_siz {
-    margin-bottom: 1.5rem;
+	margin-bottom: 1.5rem;
     position: unset;
     width: 200px;
 }
@@ -979,7 +998,7 @@ footer {
     .form_wrapper {
         padding: 1.25rem;
     }
-}   
+}	
 
 .g-recaptcha > div {
     transform: scale(0.80);
@@ -1026,7 +1045,7 @@ footer {
     right: 0;
 }
 .main_banner {
-    padding-top: 100px;
+	padding-top: 100px;
 }
 .services_list_container {
     .service--item {
@@ -1048,7 +1067,7 @@ footer {
 }
 .why-bo-list {
     margin-top: 0;
-}   
+}	
 .overview_blueorange {
     .sec_bgimg {
         padding: 2rem 1rem 2rem;
@@ -1190,7 +1209,7 @@ footer {
         }
     }
 }
-}   
+}	
 .video_sec {
     video {
         height: 230px;
